# dioxus-hackernews

./: Cargo.toml  Dioxus.toml  package.json  rest.rest  tailwind.config.js
htmls/: comment.html  index.html  main.html  send.html  story_item.html
src/: api.rs  lib.rs  main.rs
src/ui/: comments.rs  mod.rs  stories.rs  story_comment.rs  story_item.rs
