[package]
name = "hackernews"
version = "0.1.0"
authors = ["lyfQAQ <0219lyf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }


dioxus = { version = "0.5", features = ["web", "router"] }



# Debug
dioxus-logger = "0.5.1"
futures = "0.3.31"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
futures-test = "0.3.31"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
